# oriole-text

./: .gitignore  Cargo.toml  README.md
src/: atlas.rs  font.rs  glium_render.rs  lib.rs  rectangle.rs  text.rs
