[package]
name = "oriole-text"
version = "0.1.0"
authors = ["johannesvollmer <johannes.boenki@t-online.de>"]
edition = "2018"

[dependencies]
# serialization
serde = { version = "1.0.87", features = ["derive"] }
compress = "0.1.2"
bincode = "1.1.1"

# alternatives to std
hashbrown = "0.1.8"



# optional rendering presets
glium = { version = "0.23.0", optional = true }

[features]
glium-render = [ "glium" ]